# learning-drich-dev

./: README.md
installingIRTv1/: CMakeLists.txt  CherenkovPIDAnalysis.cc  IrtGeoDRICH.cc  IrtGeoPFRICH.cc  README.md  dconfig-chandra.C  dconfig.C  dloop.C  draw_benchmark.py  environ.sh  g4dRIChOptics.hh  momentum_scan.rb  momentum_scan_2D_draw.C  recon_sandbox.yaml  setup_steps.sh
